# IMU-Error-model

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: imu_error_model.tex
examples/: adis_allan_overlay.py  allan_variance.py  dead_reckoning.py  showcase.py
examples/imu_profiles/: README.md
examples/imu_profiles/hardware-estimates/: ADIS16470.yaml  ICM-42688-P.yaml  hg1700ag58.yaml  hg1700ag59.yaml  hg1700ag60.yaml  hg1700ag61.yaml  hg1700ag71.yaml  hg5700aa01.yaml  hg5700ba01.yaml  hg5700ca01.yaml  hg9900.yaml  human.yaml  iphone_like.yaml  sbg_pulse_40.yaml
profiles/: ideal.json  phone-example.json
profiles/test/: flicker-band.json  short-correlation.json
research/data/: adis16470_allan_reference.csv
scripts/: check_markdown.py  ci.py
src/imu_error_model/: __init__.py  config.py  distortions.py  interfaces.py  kinematics.py  model.py  processes.py  profiles.py  signals.py  thermal.py
tests/: test_allan_parity.py  test_example.py  test_features.py  test_interface.py  test_model.py  test_profile_verification.py  test_validation_and_processes.py
